fixed previous lab1-2, done lab1-5